src/test/ui/type-dependent-def-issue-49241.stderr
error[E0434]: can't capture dynamic environment in a fn item
  --> $DIR/type-dependent-def-issue-49241.rs:13:22
   |
LL |     const l: usize = v.count(); //~ ERROR can't capture dynamic environment in a fn item
   |                      ^
   |
   = help: use the `|| { ... }` closure form instead

error: aborting due to previous error

For more information about this error, try `rustc --explain E0434`.
